// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component tests Behaviour Press does not work when button is disabled 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CustomButton
    enabled={false}
    onPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Styled(Text)
          style={
            Array [
              Object {
                "color": "#FF8B00",
                "fontSize": 14,
                "fontWeight": "bold",
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              },
              undefined,
              Object {
                "color": "#BBBDBF",
              },
            ]
          }
          virtual={undefined}
        />,
        undefined,
      ],
      "enabled": true,
      "onPress": [MockFunction],
      "style": Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 15,
          "elevation": 0,
          "height": 30,
          "justifyContent": "center",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
        },
        undefined,
      ],
      "testID": "Touchable",
      "title": "",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": undefined,
          "style": Array [
            Object {
              "color": "#FF8B00",
              "fontSize": 14,
              "fontWeight": "bold",
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            },
            undefined,
            Object {
              "color": "#BBBDBF",
            },
          ],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(Text)
            style={
              Array [
                Object {
                  "color": "#FF8B00",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "letterSpacing": -0.02,
                  "lineHeight": 19,
                  "textAlign": "center",
                },
                undefined,
                Object {
                  "color": "#BBBDBF",
                },
              ]
            }
            virtual={undefined}
          />,
          undefined,
        ],
        "enabled": true,
        "onPress": [MockFunction],
        "style": Array [
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 15,
            "elevation": 0,
            "height": 30,
            "justifyContent": "center",
            "shadowOffset": Object {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
          },
          undefined,
        ],
        "testID": "Touchable",
        "title": "",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": undefined,
            "style": Array [
              Object {
                "color": "#FF8B00",
                "fontSize": 14,
                "fontWeight": "bold",
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              },
              undefined,
              Object {
                "color": "#BBBDBF",
              },
            ],
            "virtual": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button component tests Behaviour Press works 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CustomButton
    enabled={true}
    onPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Styled(Text)
          style={
            Array [
              Object {
                "color": "#FF8B00",
                "fontSize": 14,
                "fontWeight": "bold",
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              },
              undefined,
              false,
            ]
          }
          virtual={undefined}
        />,
        undefined,
      ],
      "enabled": true,
      "onPress": [MockFunction],
      "style": Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 15,
          "elevation": 0,
          "height": 30,
          "justifyContent": "center",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
        },
        undefined,
      ],
      "testID": "Touchable",
      "title": "",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": undefined,
          "style": Array [
            Object {
              "color": "#FF8B00",
              "fontSize": 14,
              "fontWeight": "bold",
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            },
            undefined,
            false,
          ],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(Text)
            style={
              Array [
                Object {
                  "color": "#FF8B00",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "letterSpacing": -0.02,
                  "lineHeight": 19,
                  "textAlign": "center",
                },
                undefined,
                false,
              ]
            }
            virtual={undefined}
          />,
          undefined,
        ],
        "enabled": true,
        "onPress": [MockFunction],
        "style": Array [
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 15,
            "elevation": 0,
            "height": 30,
            "justifyContent": "center",
            "shadowOffset": Object {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
          },
          undefined,
        ],
        "testID": "Touchable",
        "title": "",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": undefined,
            "style": Array [
              Object {
                "color": "#FF8B00",
                "fontSize": 14,
                "fontWeight": "bold",
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              },
              undefined,
              false,
            ],
            "virtual": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button component tests Rendering Default 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CustomButton />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Styled(Text)
          style={
            Array [
              Object {
                "color": "#FF8B00",
                "fontSize": 14,
                "fontWeight": "bold",
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              },
              undefined,
              false,
            ]
          }
          virtual={undefined}
        />,
        undefined,
      ],
      "enabled": true,
      "onPress": [Function],
      "style": Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 15,
          "elevation": 0,
          "height": 30,
          "justifyContent": "center",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
        },
        undefined,
      ],
      "testID": "Touchable",
      "title": "",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": undefined,
          "style": Array [
            Object {
              "color": "#FF8B00",
              "fontSize": 14,
              "fontWeight": "bold",
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            },
            undefined,
            false,
          ],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(Text)
            style={
              Array [
                Object {
                  "color": "#FF8B00",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "letterSpacing": -0.02,
                  "lineHeight": 19,
                  "textAlign": "center",
                },
                undefined,
                false,
              ]
            }
            virtual={undefined}
          />,
          undefined,
        ],
        "enabled": true,
        "onPress": [Function],
        "style": Array [
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 15,
            "elevation": 0,
            "height": 30,
            "justifyContent": "center",
            "shadowOffset": Object {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
          },
          undefined,
        ],
        "testID": "Touchable",
        "title": "",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": undefined,
            "style": Array [
              Object {
                "color": "#FF8B00",
                "fontSize": 14,
                "fontWeight": "bold",
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              },
              undefined,
              false,
            ],
            "virtual": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button component tests Rendering Disabled 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CustomButton
    enabled={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Styled(Text)
          style={
            Array [
              Object {
                "color": "#FF8B00",
                "fontSize": 14,
                "fontWeight": "bold",
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              },
              undefined,
              Object {
                "color": "#BBBDBF",
              },
            ]
          }
          virtual={undefined}
        />,
        undefined,
      ],
      "enabled": true,
      "onPress": [Function],
      "style": Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 15,
          "elevation": 0,
          "height": 30,
          "justifyContent": "center",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
        },
        undefined,
      ],
      "testID": "Touchable",
      "title": "",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": undefined,
          "style": Array [
            Object {
              "color": "#FF8B00",
              "fontSize": 14,
              "fontWeight": "bold",
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            },
            undefined,
            Object {
              "color": "#BBBDBF",
            },
          ],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(Text)
            style={
              Array [
                Object {
                  "color": "#FF8B00",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "letterSpacing": -0.02,
                  "lineHeight": 19,
                  "textAlign": "center",
                },
                undefined,
                Object {
                  "color": "#BBBDBF",
                },
              ]
            }
            virtual={undefined}
          />,
          undefined,
        ],
        "enabled": true,
        "onPress": [Function],
        "style": Array [
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 15,
            "elevation": 0,
            "height": 30,
            "justifyContent": "center",
            "shadowOffset": Object {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
          },
          undefined,
        ],
        "testID": "Touchable",
        "title": "",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": undefined,
            "style": Array [
              Object {
                "color": "#FF8B00",
                "fontSize": 14,
                "fontWeight": "bold",
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              },
              undefined,
              Object {
                "color": "#BBBDBF",
              },
            ],
            "virtual": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button component tests Rendering Disabled with children 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CustomButton
    enabled={false}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Custom text inside button
    </Text>
  </CustomButton>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Custom text inside button
        </Text>,
        undefined,
      ],
      "enabled": true,
      "onPress": [Function],
      "style": Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 15,
          "elevation": 0,
          "height": 30,
          "justifyContent": "center",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
        },
        undefined,
      ],
      "testID": "Touchable",
      "title": "",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "Custom text inside button",
          "ellipsizeMode": "tail",
        },
        "ref": null,
        "rendered": "Custom text inside button",
        "type": [Function],
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            Custom text inside button
          </Text>,
          undefined,
        ],
        "enabled": true,
        "onPress": [Function],
        "style": Array [
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 15,
            "elevation": 0,
            "height": 30,
            "justifyContent": "center",
            "shadowOffset": Object {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
          },
          undefined,
        ],
        "testID": "Touchable",
        "title": "",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Custom text inside button",
            "ellipsizeMode": "tail",
          },
          "ref": null,
          "rendered": "Custom text inside button",
          "type": [Function],
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button component tests Rendering Disabled with title 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CustomButton
    enabled={false}
    title="Testing title"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Styled(Text)
          style={
            Array [
              Object {
                "color": "#FF8B00",
                "fontSize": 14,
                "fontWeight": "bold",
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              },
              undefined,
              Object {
                "color": "#BBBDBF",
              },
            ]
          }
          virtual={undefined}
        >
          Testing title
        </Styled(Text)>,
        undefined,
      ],
      "enabled": true,
      "onPress": [Function],
      "style": Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 15,
          "elevation": 0,
          "height": 30,
          "justifyContent": "center",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
        },
        undefined,
      ],
      "testID": "Touchable",
      "title": "",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Testing title",
          "style": Array [
            Object {
              "color": "#FF8B00",
              "fontSize": 14,
              "fontWeight": "bold",
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            },
            undefined,
            Object {
              "color": "#BBBDBF",
            },
          ],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": "Testing title",
        "type": [Function],
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(Text)
            style={
              Array [
                Object {
                  "color": "#FF8B00",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "letterSpacing": -0.02,
                  "lineHeight": 19,
                  "textAlign": "center",
                },
                undefined,
                Object {
                  "color": "#BBBDBF",
                },
              ]
            }
            virtual={undefined}
          >
            Testing title
          </Styled(Text)>,
          undefined,
        ],
        "enabled": true,
        "onPress": [Function],
        "style": Array [
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 15,
            "elevation": 0,
            "height": 30,
            "justifyContent": "center",
            "shadowOffset": Object {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
          },
          undefined,
        ],
        "testID": "Touchable",
        "title": "",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Testing title",
            "style": Array [
              Object {
                "color": "#FF8B00",
                "fontSize": 14,
                "fontWeight": "bold",
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              },
              undefined,
              Object {
                "color": "#BBBDBF",
              },
            ],
            "virtual": undefined,
          },
          "ref": null,
          "rendered": "Testing title",
          "type": [Function],
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button component tests Rendering Enabled 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CustomButton
    enabled={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Styled(Text)
          style={
            Array [
              Object {
                "color": "#FF8B00",
                "fontSize": 14,
                "fontWeight": "bold",
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              },
              undefined,
              false,
            ]
          }
          virtual={undefined}
        />,
        undefined,
      ],
      "enabled": true,
      "onPress": [Function],
      "style": Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 15,
          "elevation": 0,
          "height": 30,
          "justifyContent": "center",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
        },
        undefined,
      ],
      "testID": "Touchable",
      "title": "",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": undefined,
          "style": Array [
            Object {
              "color": "#FF8B00",
              "fontSize": 14,
              "fontWeight": "bold",
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            },
            undefined,
            false,
          ],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(Text)
            style={
              Array [
                Object {
                  "color": "#FF8B00",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "letterSpacing": -0.02,
                  "lineHeight": 19,
                  "textAlign": "center",
                },
                undefined,
                false,
              ]
            }
            virtual={undefined}
          />,
          undefined,
        ],
        "enabled": true,
        "onPress": [Function],
        "style": Array [
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 15,
            "elevation": 0,
            "height": 30,
            "justifyContent": "center",
            "shadowOffset": Object {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
          },
          undefined,
        ],
        "testID": "Touchable",
        "title": "",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": undefined,
            "style": Array [
              Object {
                "color": "#FF8B00",
                "fontSize": 14,
                "fontWeight": "bold",
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              },
              undefined,
              false,
            ],
            "virtual": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button component tests Rendering Enabled with children 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CustomButton
    enabled={true}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Custom text inside button
    </Text>
  </CustomButton>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Custom text inside button
        </Text>,
        undefined,
      ],
      "enabled": true,
      "onPress": [Function],
      "style": Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 15,
          "elevation": 0,
          "height": 30,
          "justifyContent": "center",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
        },
        undefined,
      ],
      "testID": "Touchable",
      "title": "",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "Custom text inside button",
          "ellipsizeMode": "tail",
        },
        "ref": null,
        "rendered": "Custom text inside button",
        "type": [Function],
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            Custom text inside button
          </Text>,
          undefined,
        ],
        "enabled": true,
        "onPress": [Function],
        "style": Array [
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 15,
            "elevation": 0,
            "height": 30,
            "justifyContent": "center",
            "shadowOffset": Object {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
          },
          undefined,
        ],
        "testID": "Touchable",
        "title": "",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Custom text inside button",
            "ellipsizeMode": "tail",
          },
          "ref": null,
          "rendered": "Custom text inside button",
          "type": [Function],
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button component tests Rendering Enabled with title 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CustomButton
    enabled={true}
    title="Testing title"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Styled(Text)
          style={
            Array [
              Object {
                "color": "#FF8B00",
                "fontSize": 14,
                "fontWeight": "bold",
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              },
              undefined,
              false,
            ]
          }
          virtual={undefined}
        >
          Testing title
        </Styled(Text)>,
        undefined,
      ],
      "enabled": true,
      "onPress": [Function],
      "style": Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 15,
          "elevation": 0,
          "height": 30,
          "justifyContent": "center",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
        },
        undefined,
      ],
      "testID": "Touchable",
      "title": "",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Testing title",
          "style": Array [
            Object {
              "color": "#FF8B00",
              "fontSize": 14,
              "fontWeight": "bold",
              "letterSpacing": -0.02,
              "lineHeight": 19,
              "textAlign": "center",
            },
            undefined,
            false,
          ],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": "Testing title",
        "type": [Function],
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(Text)
            style={
              Array [
                Object {
                  "color": "#FF8B00",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "letterSpacing": -0.02,
                  "lineHeight": 19,
                  "textAlign": "center",
                },
                undefined,
                false,
              ]
            }
            virtual={undefined}
          >
            Testing title
          </Styled(Text)>,
          undefined,
        ],
        "enabled": true,
        "onPress": [Function],
        "style": Array [
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 15,
            "elevation": 0,
            "height": 30,
            "justifyContent": "center",
            "shadowOffset": Object {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
          },
          undefined,
        ],
        "testID": "Touchable",
        "title": "",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Testing title",
            "style": Array [
              Object {
                "color": "#FF8B00",
                "fontSize": 14,
                "fontWeight": "bold",
                "letterSpacing": -0.02,
                "lineHeight": 19,
                "textAlign": "center",
              },
              undefined,
              false,
            ],
            "virtual": undefined,
          },
          "ref": null,
          "rendered": "Testing title",
          "type": [Function],
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
